...
    override func viewDidLoad() {
        super.viewDidLoad()
        setupView()
    }
    
    func setupView() {
        profileName.text = "Lucas C. Barros"
        profilePhone.text = "LucasCavalcanteDeBarros@gmail.com"
        profileLink.text = "www.Linked.com/LucasCBarros"

        profilePhoto.layer.borderWidth = 5
        profilePhoto.layer.masksToBounds = false
        profilePhoto.layer.borderColor = UIColor.white.cgColor
...
