...
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sr-x2-gnq">
                                        <rect key="frame" x="0.0" y="124.5" width="159.5" height="30"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Add Device">
                                            <color key="titleColor" systemColor="systemGreenColor"/>
                                        </state>
                                        <connections>
                                            <action selector="tapAddDevice:" destination="w5E-lg-eYS" eventType="touchUpInside" id="Utl-0D-7z3"/>
                                        </connections>
                                    </button>
...
